samples/_failures_safe/1761072782_441745_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3117f40b.c:164: error: expected ‘;’, ‘,’ or ‘)’ at end of input
